--- a/Compiladores/AlgoritmoArbolSintactico/styles.css
+++ b/Compiladores/AlgoritmoArbolSintactico/styles.css
@@ -1,10 +1,38 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-container {
+  flex: 0.3;
+  max-height: 600px;
+  overflow-y: scroll;
+}
+
+.field {
+  margin-top: 0.5rem;
+}
+
+.field > label {
+  display: block;
+  font-weight: bold;
+}
+
+#continue-button {
+  margin-top: 0.5rem;
+}
+
 #cy {
-    width: 100%;
-    height: 600px;
-    display: block;
-    border: 1px solid #000;
+  flex: 1;
+  height: 600px;
+  display: block;
+  border: 1px solid #000;
 }
 
 .title {
-    text-align: center;
+  text-align: center;
 }
